Info da Dashboard

--- a/Sprint 2/Site Institucional/Site Institucional/pages/sala.html
+++ b/Sprint 2/Site Institucional/Site Institucional/pages/sala.html
@@ -22,7 +22,7 @@
                 <a href="#" class="nav_logo">
                 </a>
                 <div class="nav_list">
-                    <a href="./dashboard.html" class="go-back nav_link selected">
+                    <a href="./dashboard.html" class="go-back nav_link ">
                         <i class="fas fa-arrow-left"></i>
                     </a>
 
@@ -67,8 +67,32 @@
                     <h1>Informações</h1>
                     <hr class="pink-stroke" />
                 </div>
-                <div>
-                    BLABLABLABLA
+                <div class="information">
+                    <div class="info">
+                        <h3>Extremamente Baixa:</h3>
+                        <div class="round-color ex-low"></div>
+                    </div>
+
+                    <div class="info">
+                        <h3> Baixa:</h3>
+                        <div class="round-color low"></div>
+                    </div>
+
+                    <div class="info">
+                        <h3>Ideal:</h3>
+                        <div class="round-color ideal"></div>
+                    </div>
+
+                    <div class="info">
+                        <h3>Alta:</h3>
+                        <div class="round-color high"></div>
+                    </div>
+
+                    <div class="info">
+                        <h3>Extremamente Alta:</h3>
+                        <div class="round-color ex-high"></div>
+                    </div>
+
                 </div>
             </div>
             <div class="panel">
