--- a/Sprint 2/API - ESTILIZADA/NODE5/index.html
+++ b/Sprint 2/API - ESTILIZADA/NODE5/index.html
@@ -15,6 +15,7 @@
 	<link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
 	<!--Link biblioteca de icones online-->
 	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+	<script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 	<style>
 		canvas {
 			-moz-user-select: none;
