--- a/Sprint 2/Site Institucional/Site Institucional/index.html
+++ b/Sprint 2/Site Institucional/Site Institucional/index.html
@@ -234,7 +234,7 @@
                                     </div>
                                     <h3>Basic</h3>
                                     <div class="box-text">
-                                        <p>Escolha o monitoramento de 1 sensor.</p>
+                                        <p>Escolha 1 tipo de sensor de monitoramento.</p>
                                     </div>
                                 </div>
                                 <div class="boxes-item">
@@ -243,7 +243,7 @@
                                     </div>
                                     <h3>Medium</h3>
                                     <div class="box-text">
-                                        <p>Escolha o monitoramento de 2 sensores.</p>
+                                        <p>Escolha 2 tipos de sensores de monitoramento.</p>
                                     </div>
                                 </div>
                                 <div class="boxes-item">
@@ -252,7 +252,7 @@
                                     </div>
                                     <h3>Premium</h3>
                                     <div class="box-text">
-                                        <p>Inclui o monitoramento com os 3 sensores.</p>
+                                        <p>Escolha 3 tipos de sensores de monitoramento.</p>
                                     </div>
                                 </div>
                             </div>
