--- a/Sprint 3/new-site-inst/API-projeto-site/public/pages/login.html
+++ b/Sprint 3/new-site-inst/API-projeto-site/public/pages/login.html
@@ -35,15 +35,16 @@
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
-                <form class="sign-in-form" onsubmit="login()" action="javascript:void(0)">
+                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login()"
+                    action="javascript:void(0)">
                     <h2 class="title">Bem-vindo</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input id="userLogin" type="text" placeholder="Usuário" required>
+                        <input id="userLogin" type="text" name="login" placeholder="Usuário" required>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input id="userPassword" type="password" placeholder="Senha" required>
+                        <input id="userPassword" type="password" name="senha" placeholder="Senha" required>
                     </div>
                     <input type="submit" value="Login" class="btn solid">
 
@@ -66,15 +67,16 @@
                 </form>
 
                 <!--Formulário de Cadastro-->
-                <form class="sign-up-form" onsubmit="cadastrar()" action="javascript:void(0)">
+                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()"
+                    action="javascript:void(0)">
                     <h2 class="title">Cadastre-se</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input id="userCadastro" type="text" placeholder="Usuário" required>
+                        <input id="userCadastro" type="text" name="login" placeholder="Usuário" required>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input id="emailCadastro" type="text" placeholder="E-mail" required>
+                        <input id="emailCadastro" type="text" name="email" placeholder="E-mail" required>
                     </div>
                     <div id="error-message-email" class="error-message">
                         <i class="fas fa-times-circle"></i>
@@ -82,8 +84,8 @@
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input id="cadastroPassword" onkeyup="checkPassword()" type="password" placeholder="Senha"
-                            required>
+                        <input id="cadastroPassword" onkeyup="checkPassword()" name="senha" type="password"
+                            placeholder="Senha" required>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
