--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/dashboard.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/dashboard.html
@@ -26,7 +26,7 @@
                         <span class="nav_name">Users</span>
                     </a>
 
-                    <a href="#" class="nav_link selected">
+                    <a href="#" class="nav_link">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
@@ -36,14 +36,9 @@
                         <span class="nav_name">Messages</span>
                     </a>
 
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
-                        <span class="nav_name">Analytics</span>
-                    </a>
-
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-folder nav_icon'></i>
-                        <span class="nav_name">Data</span>
+                    <a href="cadastro-responsavel.html" class="nav_link ">
+                        <i class='bx bx-user-plus nav_icon'></i>
+                        <span class="nav_name">Add User</span>
                     </a>
                 </div>
             </div>
