--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
@@ -35,7 +35,8 @@
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
-                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()" action="javascript:void(0)">
+                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()"
+                    action="javascript:void(0)">
                     <h2 class="title">Bem-vindo</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
@@ -63,32 +64,10 @@
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </div> -->
-                </form>
 
-                <!--Formulário de Cadastro-->
-                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()" action="javascript:void(0)">
-                    <h2 class="title">Cadastre-se</h2>
-                    <div class="input-field">
-                        <i class="fas fa-user"></i>
-                        <input id="userCadastro" type="text" name="login" placeholder="Usuário" required>
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-envelope"></i>
-                        <input id="emailCadastro" type="text" name="email" placeholder="E-mail" required>
-                    </div>
-                    <div id="error-message-email" class="error-message">
-                        <i class="fas fa-times-circle"></i>
-                        <p>E-mail inválido</p>
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-lock"></i>
-                        <input id="cadastroPassword" onkeyup="checkPassword()" name="senha" type="password" placeholder="Senha" required>
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-lock"></i>
-                        <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password" placeholder="Confirme sua senha" required>
-                    </div>
-                    <div class="check-container">
+
+
+                    <!-- <div class="check-container">
                         <div class="check-option">
                             <p>As senhas devem ser iguais</p>
                             <i id="equal-pass" class="far fa-check-circle"></i>
@@ -106,9 +85,46 @@
                             <p>Pelo menos um número</p>
                             <i id="numericChar" class="far fa-check-circle"></i>
                         </div>
+                    </div> -->
+
+                </form>
+
+                <!--Formulário de Cadastro-->
+                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()"
+                    action="javascript:void(0)">
+                    <div>
+
+                        <div class="step-row">
+                            <div id="progress" class="progress"></div>
+                            <div class="step-colum"><small>Etapa 1</small></div>
+                            <div class="step-colum"><small>Etapa 2</small></div>
+                            <div class="step-colum"><small>Etapa 3</small></div>
+                        </div>
+
+                        <div class="input-field">
+                            <i class="fas fa-user"></i>
+                            <input id="userCadastro" type="text" name="login" placeholder="Empresa" required>
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-id-card"></i>
+                            <input id="emailCadastro" type="text" name="email" placeholder="CNPJ" required>
+                        </div>
+                        <div id="error-message-email" class="error-message">
+                            <i class="fas fa-times-circle"></i>
+                            <p>E-mail inválido</p>
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-phone-alt"></i>
+                            <input id="cadastroPassword" onkeyup="" name="senha" placeholder="Telefone" required>
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-envelope"></i>
+                            <input id="emailCadastro" type="text" name="email" placeholder="E-mail" required>
+                        </div>
                     </div>
 
-                    <input type="submit" value="Cadastrar" class="btn solid pink">
+
+                    <input type="submit" value="Próximo" class="btn solid pink">
 
 
                     <!-- <p class="social-text">Ou Cadastre-se com as redes sociais</p>
