--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
@@ -92,35 +92,127 @@
                 <!--Formulário de Cadastro-->
                 <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()"
                     action="javascript:void(0)">
-                    <div>
 
-                        <div class="step-row">
-                            <div id="progress" class="progress"></div>
-                            <div class="step-colum"><small>Etapa 1</small></div>
-                            <div class="step-colum"><small>Etapa 2</small></div>
-                            <div class="step-colum"><small>Etapa 3</small></div>
+                    <div class="step-row">
+                        <div id="progress" class="progress"></div>
+                        <div class="step-colum"><small>Etapa 1</small></div>
+                        <div class="step-colum"><small>Etapa 2</small></div>
+                        <div class="step-colum"><small>Etapa 3</small></div>
+                    </div>
+
+                    <div class="inputs-holder">
+                        <div class="first-step invisible">
+                            <div class="input-field">
+                                <i class="fas fa-user"></i>
+                                <input id="userCadastro" type="text" name="login" placeholder="Empresa" required>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-id-card"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="CNPJ" required>
+                            </div>
+                            <div id="error-message-email" class="error-message">
+                                <i class="fas fa-times-circle"></i>
+                                <p>E-mail inválido</p>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-phone-alt"></i>
+                                <input id="cadastroPassword" onkeyup="" name="senha" placeholder="Telefone" required>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-envelope"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="E-mail" required>
+                            </div>
                         </div>
 
-                        <div class="input-field">
-                            <i class="fas fa-user"></i>
-                            <input id="userCadastro" type="text" name="login" placeholder="Empresa" required>
+                        <div class="second-step">
+                            <!--cep,logradouro,uf,cidade,numero,complemento,bairro-->
+                            <div class="input-field">
+                                <i class="fas fa-user"></i>
+                                <input id="userCadastro" type="number" name="login" placeholder="CEP" required>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-road"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="Logradouro" required>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <select id="selectUF" onkeyup="" name="senha" placeholder="UF" required>
+                                    <option disabled selected>Selectione um UF</option>
+                                    <option>AC</option>
+                                    <option>AL</option>
+                                    <option>AM</option>
+                                    <option>AP</option>
+                                    <option>BA</option>
+                                    <option>CE</option>
+                                    <option>DF</option>
+                                    <option>ES</option>
+                                    <option>GO</option>
+                                    <option>MA</option>
+                                    <option>MT</option>
+                                    <option>MS</option>
+                                    <option>MG</option>
+                                    <option>PA</option>
+                                    <option>PB</option>
+                                    <option>PR</option>
+                                    <option>PE</option>
+                                    <option>PI</option>
+                                    <option>RJ</option>
+                                    <option>RN</option>
+                                    <option>RS</option>
+                                    <option>RO</option>
+                                    <option>RR</option>
+                                    <option>SC</option>
+                                    <option>SP</option>
+                                    <option>SE</option>
+                                    <option>TO</option>
+                                </select>
+                            </div>
+
+
+
+                            <div class="input-field">
+                                <i class="fas fa-envelope"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="Cidade" required>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-envelope"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="Número" required>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-envelope"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="Complemento" required>
+                            </div>
+
+                            <div class="input-field">
+                                <i class="fas fa-envelope"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="Bairro" required>
+                            </div>
                         </div>
-                        <div class="input-field">
-                            <i class="fas fa-id-card"></i>
-                            <input id="emailCadastro" type="text" name="email" placeholder="CNPJ" required>
+
+
+                        <div class="third-step invisible">
+                            <div class="input-field">
+                                <i class="fas fa-user"></i>
+                                <input id="userCadastro" type="text" name="login" placeholder="Empresa" required>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-id-card"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="CNPJ" required>
+                            </div>
+                            <div id="error-message-email" class="error-message">
+                                <i class="fas fa-times-circle"></i>
+                                <p>E-mail inválido</p>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-phone-alt"></i>
+                                <input id="cadastroPassword" onkeyup="" name="senha" placeholder="Telefone" required>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-envelope"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="E-mail" required>
+                            </div>
                         </div>
-                        <div id="error-message-email" class="error-message">
-                            <i class="fas fa-times-circle"></i>
-                            <p>E-mail inválido</p>
-                        </div>
-                        <div class="input-field">
-                            <i class="fas fa-phone-alt"></i>
-                            <input id="cadastroPassword" onkeyup="" name="senha" placeholder="Telefone" required>
-                        </div>
-                        <div class="input-field">
-                            <i class="fas fa-envelope"></i>
-                            <input id="emailCadastro" type="text" name="email" placeholder="E-mail" required>
-                        </div>
+
                     </div>
 
 
