arrumando a scroll bar e o tamanho dos inputs

--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
@@ -128,7 +128,7 @@
                             <!--cep,logradouro,uf,cidade,numero,complemento,bairro-->
                             <div class="input-field">
                                 <i class="fas fa-user"></i>
-                                <input id="userCadastro" type="number" name="login" placeholder="CEP" required>
+                                <input id="userCadastro" type="number" name="login" placeholder="CEP" min="0" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-road"></i>
