--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
@@ -67,25 +67,6 @@
 
 
 
-                    <!-- <div class="check-container">
-                        <div class="check-option">
-                            <p>As senhas devem ser iguais</p>
-                            <i id="equal-pass" class="far fa-check-circle"></i>
-                        </div>
-                        <p class="social-text"> A senha deve conter:</p>
-                        <div class="check-option">
-                            <p>Mais de 3 caracteres</p>
-                            <i id="minChar" class="far fa-check-circle"></i>
-                        </div>
-                        <div class="check-option">
-                            <p>Pelo menos uma letra maiúscula</p>
-                            <i id="upperCase" class="far fa-check-circle"></i>
-                        </div>
-                        <div class="check-option">
-                            <p>Pelo menos um número</p>
-                            <i id="numericChar" class="far fa-check-circle"></i>
-                        </div>
-                    </div> -->
 
                 </form>
 
@@ -101,7 +82,8 @@
                     </div>
 
                     <div class="inputs-holder">
-                        <div class="first-step invisible">
+
+                        <div class="first-step">
                             <div class="input-field">
                                 <i class="fas fa-user"></i>
                                 <input id="userCadastro" type="text" name="login" placeholder="Empresa" required>
@@ -124,10 +106,10 @@
                             </div>
                         </div>
 
-                        <div class="second-step">
+                        <div class="second-step invisible">
                             <!--cep,logradouro,uf,cidade,numero,complemento,bairro-->
                             <div class="input-field">
-                                <i class="fas fa-user"></i>
+                                <i class="fas fa-globe-americas"></i>
                                 <input id="userCadastro" type="number" name="login" placeholder="CEP" min="0" required>
                             </div>
                             <div class="input-field">
@@ -135,7 +117,7 @@
                                 <input id="emailCadastro" type="text" name="email" placeholder="Logradouro" required>
                             </div>
                             <div class="input-field">
-                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-globe"></i>
                                 <select id="selectUF" onkeyup="" name="senha" placeholder="UF" required>
                                     <option disabled selected>Selectione um UF</option>
                                     <option>AC</option>
@@ -168,55 +150,76 @@
                                 </select>
                             </div>
 
-
-
                             <div class="input-field">
-                                <i class="fas fa-envelope"></i>
+                                <i class="fas fa-city"></i>
                                 <input id="emailCadastro" type="text" name="email" placeholder="Cidade" required>
                             </div>
+
                             <div class="input-field">
-                                <i class="fas fa-envelope"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <input id="emailCadastro" type="text" name="email" placeholder="Bairro" required>
+                            </div>
+
+                            <div class="input-field">
+                                <i class="fas fa-home"></i>
                                 <input id="emailCadastro" type="text" name="email" placeholder="Número" required>
                             </div>
                             <div class="input-field">
-                                <i class="fas fa-envelope"></i>
+                                <i class="fas fa-plus"></i>
                                 <input id="emailCadastro" type="text" name="email" placeholder="Complemento" required>
                             </div>
 
-                            <div class="input-field">
-                                <i class="fas fa-envelope"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="Bairro" required>
-                            </div>
+
                         </div>
 
 
                         <div class="third-step invisible">
                             <div class="input-field">
                                 <i class="fas fa-user"></i>
-                                <input id="userCadastro" type="text" name="login" placeholder="Empresa" required>
+                                <input id="userCadastro" type="text" name="nome" placeholder="Login" required>
                             </div>
                             <div class="input-field">
-                                <i class="fas fa-id-card"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="CNPJ" required>
-                            </div>
-                            <div id="error-message-email" class="error-message">
-                                <i class="fas fa-times-circle"></i>
-                                <p>E-mail inválido</p>
+                                <i class="fas fa-lock"></i>
+                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senha" type="password"
+                                    placeholder="Senha" required>
                             </div>
                             <div class="input-field">
-                                <i class="fas fa-phone-alt"></i>
-                                <input id="cadastroPassword" onkeyup="" name="senha" placeholder="Telefone" required>
+                                <i class="fas fa-lock"></i>
+                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
+                                    placeholder="Confirme sua senha" required>
                             </div>
-                            <div class="input-field">
-                                <i class="fas fa-envelope"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="E-mail" required>
+
+
+                            <div class="check-container">
+                                <div class="check-option">
+                                    <p>As senhas devem ser iguais</p>
+                                    <i id="equal-pass" class="far fa-check-circle"></i>
+                                </div>
+                                <p class="social-text"> A senha deve conter:</p>
+                                <div class="check-option">
+                                    <p>Mais de 3 caracteres</p>
+                                    <i id="minChar" class="far fa-check-circle"></i>
+                                </div>
+                                <div class="check-option">
+                                    <p>Pelo menos uma letra maiúscula</p>
+                                    <i id="upperCase" class="far fa-check-circle"></i>
+                                </div>
+                                <div class="check-option">
+                                    <p>Pelo menos um número</p>
+                                    <i id="numericChar" class="far fa-check-circle"></i>
+                                </div>
                             </div>
+
                         </div>
 
                     </div>
 
+                    <div class="sign-btns">
+                        <input type="button" onclick="previous()" value="Anterior" class="btn solid pink">
 
-                    <input type="submit" value="Próximo" class="btn solid pink">
+                        <input type="button" onclick="next()" value="Próximo" class="btn solid pink">
+
+                    </div>
 
 
                     <!-- <p class="social-text">Ou Cadastre-se com as redes sociais</p>
