--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
@@ -86,11 +86,11 @@
                         <div class="first-step">
                             <div class="input-field">
                                 <i class="fas fa-user"></i>
-                                <input id="userCadastro" type="text" name="login" placeholder="Empresa" required>
+                                <input id="nomeEmpresa" type="text" name="nomeEmpresa" placeholder="Empresa" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-id-card"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="CNPJ" required>
+                                <input id="cnpjEmpresa" type="text" name="cnpjEmpresa" placeholder="CNPJ" required>
                             </div>
                             <div id="error-message-email" class="error-message">
                                 <i class="fas fa-times-circle"></i>
@@ -98,11 +98,11 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-phone-alt"></i>
-                                <input id="cadastroPassword" onkeyup="" name="senha" placeholder="Telefone" required>
+                                <input id="telEmpresa" name="telefoneEmpresa" placeholder="Telefone" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-envelope"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="E-mail" required>
+                                <input id="emailEmpresa" type="text" name="emailEmpresa" placeholder="E-mail" required>
                             </div>
                         </div>
 
@@ -110,15 +110,15 @@
                             <!--cep,logradouro,uf,cidade,numero,complemento,bairro-->
                             <div class="input-field">
                                 <i class="fas fa-globe-americas"></i>
-                                <input id="userCadastro" type="number" name="login" placeholder="CEP" min="0" required>
+                                <input type="number" name="cepEmpresa" placeholder="CEP" min="0" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-road"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="Logradouro" required>
+                                <input type="text" name="logradouroEmpresa" placeholder="Logradouro" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-globe"></i>
-                                <select id="selectUF" onkeyup="" name="senha" placeholder="UF" required>
+                                <select id="selectUF" name="ufEmpresa" placeholder="UF" required>
                                     <option disabled selected>Selectione um UF</option>
                                     <option>AC</option>
                                     <option>AL</option>
@@ -152,21 +152,21 @@
 
                             <div class="input-field">
                                 <i class="fas fa-city"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="Cidade" required>
+                                <input type="text" name="cidadeEmpresa" placeholder="Cidade" required>
                             </div>
 
                             <div class="input-field">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="Bairro" required>
+                                <input type="text" name="bairroEmpresa" placeholder="Bairro" required>
                             </div>
 
                             <div class="input-field">
                                 <i class="fas fa-home"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="Número" required>
+                                <input type="text" name="numeroEmpresa" placeholder="Número" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-plus"></i>
-                                <input id="emailCadastro" type="text" name="email" placeholder="Complemento" required>
+                                <input type="text" name="complementoEmpresa" placeholder="Complemento" required>
                             </div>
 
 
@@ -176,11 +176,11 @@
                         <div class="third-step invisible">
                             <div class="input-field">
                                 <i class="fas fa-user"></i>
-                                <input id="userCadastro" type="text" name="nome" placeholder="Login" required>
+                                <input id="userCadastro" type="text" name="loginEmpresa" placeholder="Login" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senha" type="password"
+                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa" type="password"
                                     placeholder="Senha" required>
                             </div>
                             <div class="input-field">
