adcionando os ids

--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/cadastro-responsavel.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/cadastro-responsavel.html
@@ -63,11 +63,11 @@
                     </div>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input id="userCadastro" type="text" name="loginResponsavel" placeholder="Usuário" required>
+                        <input id="loginCadastro" type="text" name="loginResponsavel" placeholder="Usuário" required>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input id="userCadastro" type="tel" name="telCelular" placeholder="Telefone Celular" required>
+                        <input id="celularCadastro" type="tel" name="telCelular" placeholder="Telefone Celular" required>
                     </div>
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
