--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/pages/login.html
@@ -35,8 +35,7 @@
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
-                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()"
-                    action="javascript:void(0)">
+                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()" action="javascript:void(0)">
                     <h2 class="title">Bem-vindo</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
@@ -71,8 +70,7 @@
                 </form>
 
                 <!--Formulário de Cadastro-->
-                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()"
-                    action="javascript:void(0)">
+                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()" action="javascript:void(0)">
 
                     <div class="step-row">
                         <div id="progress" class="progress"></div>
@@ -110,11 +108,11 @@
                             <!--cep,logradouro,uf,cidade,numero,complemento,bairro-->
                             <div class="input-field">
                                 <i class="fas fa-globe-americas"></i>
-                                <input type="number" name="cepEmpresa" placeholder="CEP" min="0" required>
+                                <input id="cepEmpresa" type="number" name="cepEmpresa" placeholder="CEP" min="0" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-road"></i>
-                                <input type="text" name="logradouroEmpresa" placeholder="Logradouro" required>
+                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa" placeholder="Logradouro" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-globe"></i>
@@ -152,21 +150,21 @@
 
                             <div class="input-field">
                                 <i class="fas fa-city"></i>
-                                <input type="text" name="cidadeEmpresa" placeholder="Cidade" required>
+                                <input id="cidadeEmpresa" type="text" name="cidadeEmpresa" placeholder="Cidade" required>
                             </div>
 
                             <div class="input-field">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <input type="text" name="bairroEmpresa" placeholder="Bairro" required>
+                                <input id="bairroEmpresa" type="text" name="bairroEmpresa" placeholder="Bairro" required>
                             </div>
 
                             <div class="input-field">
                                 <i class="fas fa-home"></i>
-                                <input type="text" name="numeroEmpresa" placeholder="Número" required>
+                                <input id="numeroEmpresa" type="text" name="numeroEmpresa" placeholder="Número" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-plus"></i>
-                                <input type="text" name="complementoEmpresa" placeholder="Complemento" required>
+                                <input id="complementoEmpresa" type="text" name="complementoEmpresa" placeholder="Complemento" required>
                             </div>
 
 
@@ -180,13 +178,11 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa" type="password"
-                                    placeholder="Senha" required>
+                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa" type="password" placeholder="Senha" required>
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
-                                    placeholder="Confirme sua senha" required>
+                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password" placeholder="Confirme sua senha" required>
                             </div>
 
 
