Conectando as rotas de login com as tabelas no banco de dados

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -35,12 +35,11 @@
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
-                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()"
+                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login()"
                     action="javascript:void(0)">
                     <h2 class="title">Bem-vindo</h2>
-
+                    <!-- RADION BUTTONS -->
                     <div class="input-radio">
-
                         <input type="radio" name="radio_empresa" id="radio_empresa" checked>
                         <label for="radio_empresa">Empresa</label>
                         <input type="radio" name="radio_empresa" id="radio_responsavel">
