--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
@@ -36,7 +36,7 @@
                         <span class="nav_name">Messages</span>
                     </a>
 
-                    <a href="cadastro-responsavel.html" class="nav_link ">
+                    <a id="cadastro_responsavel" href="cadastro-responsavel.html" class="nav_link ">
                         <i class='bx bx-user-plus nav_icon'></i>
                         <span class="nav_name">Add User</span>
                     </a>
