Alert de warning

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -14,14 +14,14 @@
 <body>
     <div id="container" class="container">
 
-        <!-- <div id="cadastroAlert" class="alert">
+        <div id="cadastroAlert" class="alert visible">
             <span></span>
             <i class="far fa-check-circle"></i>
             <p>Cadastro realizado com sucesso!</p>
             <div onclick="closeAlert('#cadastroAlert')" class="close-btn">
                 <i class="fas fa-times"></i>
             </div>
-        </div> -->
+        </div>
 
         <div id="loginAlert" class="alert">
             <span></span>
