Alert do tipo danger feito

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -220,7 +220,7 @@
                     <div class="sign-btns">
                         <input type="button" onclick="previous()" value="Anterior" class="btn solid pink">
 
-                        <input id="signButton" type="button" onclick="generateAlert(document.getElementById('container'),'warning','Deu ruim!')" value="Próximo" class="btn solid pink">
+                        <input id="signButton" type="button" onclick="generateAlert(document.getElementById('container'),'danger','Deu ruim!')" value="Próximo" class="btn solid pink">
                         <!-- next() -->
                     </div>
 
