Subindo bug pro abner resolver :D

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -220,8 +220,7 @@
                     <div class="sign-btns">
                         <input type="button" onclick="previous()" value="Anterior" class="btn solid pink">
 
-                        <input id="signButton" type="button" onclick="generateAlert(document.getElementById('container'),null,'Deu bom!')" value="Próximo" class="btn solid pink">
-                        <!-- next() -->
+                        <input id="signButton" type="button" onclick="next()" value="Próximo" class="btn solid pink">
                     </div>
 
 
