arrumando o css da dashboard

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
@@ -55,19 +55,19 @@
                 <hr class="pink-stroke" />
             </div>
             <section class="rooms-container">
-                
-                    <div class="boxes-item">
-                        <h3>Sala 2C</h3>
-                        <div class="box-text">
-                            <p>Sala localizada no 2° andar do prédio</p>
-                            <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
-                                <i class='far fa-lightbulb luminosidade'></i>
-                            </h4>
-                            <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
-                        </div>
-                    </div>
 
-               <div class="boxes-item">
+                <div class="boxes-item">
+                    <h3>Sala 2C</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 2° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+
+                <div class="boxes-item">
                     <h3>Sala 3A</h3>
                     <div class="box-text">
                         <p>Sala localizada no 3° andar do prédio</p>
@@ -77,8 +77,8 @@
                         </h4>
                         <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                     </div>
-                </div> 
-               <div class="boxes-item">
+                </div>
+                <div class="boxes-item">
                     <h3>Sala 3A</h3>
                     <div class="box-text">
                         <p>Sala localizada no 3° andar do prédio</p>
@@ -88,8 +88,8 @@
                         </h4>
                         <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                     </div>
-                </div> 
-               <div class="boxes-item">
+                </div>
+                <div class="boxes-item">
                     <h3>Sala 3A</h3>
                     <div class="box-text">
                         <p>Sala localizada no 3° andar do prédio</p>
@@ -99,8 +99,8 @@
                         </h4>
                         <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                     </div>
-                </div> 
-               <div class="boxes-item">
+                </div>
+                <div class="boxes-item">
                     <h3>Sala 3A</h3>
                     <div class="box-text">
                         <p>Sala localizada no 3° andar do prédio</p>
@@ -110,8 +110,8 @@
                         </h4>
                         <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                     </div>
-                </div> 
-               <div class="boxes-item">
+                </div>
+                <div class="boxes-item">
                     <h3>Sala 3A</h3>
                     <div class="box-text">
                         <p>Sala localizada no 3° andar do prédio</p>
@@ -121,7 +121,128 @@
                         </h4>
                         <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                     </div>
-                </div> 
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
+                <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div>
             </section>
             <!-- <section class="box-container">
                 <div class="boxes">
