passando a sala toda para a page sala

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/sala.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/sala.html
@@ -110,7 +110,8 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    <canvas width="400px" class=" chart" id="chartHumidity"></canvas>
+                    <i style="font-size: 253.7px; color:#adadad" class="fas fa-ban"></i>
+                    <!-- <canvas width="400px" class=" chart" id="chartHumidity"></canvas> -->
                 </div>
             </div>
             <div class="panel">
